--- a/src/pages/angular/ngclass/ngclass.html
+++ b/src/pages/angular/ngclass/ngclass.html
@@ -14,6 +14,7 @@
 
 
 <ion-content padding>
+    <button ion-button block (click)="dispararEvento()">Disparar evento</button>
     <button (click)="css = 'bold'">.bold</button>
     <button (click)="css = 'font-red'">.font-red</button>
     <button (click)="css = 'italic'">.italic</button>
